--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   firebase_database: ^8.0.1
+  cloud_firestore: ^2.5.4
   firebase_core: ^1.6.0
   flutter:
     sdk: flutter
